--- a/css/style.css
+++ b/css/style.css
@@ -172,19 +172,22 @@ nav {
 
 
 /* section numero 5 */
+
+/* accentro le scritte  */
 .text-align-center {
     text-align: center;
-    width: 65%;
+    width: 70%;
     margin: auto;
 }
 
 
-.contenitore-section5 h2 {
+.h2 {
     margin-bottom: 30px;
 }
 
+/* dimensiono e accentro l immagine  */
 .immagine-section5 {
-    width: 65%;
+    width: 38%;
     margin: auto;
 }
 
@@ -194,12 +197,29 @@ nav {
     margin: auto;
 }
 
+/* metto le stelline come sfondo */
 .stars {
     background-image: url(../img/stars.svg);
     background-position: top;
     background-repeat: no-repeat;
     width: 40%;
     margin: auto;
+}
+
+/* gestisco le caratteristiche del bottone in basso  */
+.link-section5 {
+    width: 10%;
+    margin: auto;
+}
+
+.link-section5 .bottone5 {
+    background-color: hsl(226deg 58% 72%);
+    color: white;
+}
 
 
+
+/* footer  */
+.colorblack {
+    background-color: black;
 }
