--- a/css/style.css
+++ b/css/style.css
@@ -259,3 +259,22 @@ td a {
 .riga1 {
     color: hsl(226deg 58% 72%);
 }
+
+
+.credits {
+    border-top: 1px solid hsl(226deg 58% 72%);
+    height: 200px;
+    margin-top: 20px;
+}
+
+.logo-footer {
+    margin-top: 30px;
+    display: inline-block;
+}
+
+.registrati {
+    display: inline-block;
+    background-color: hsl(226deg 58% 72%);
+    color: white;
+    margin-left: 770px;
+}
