--- a/css/style.css
+++ b/css/style.css
@@ -268,11 +268,10 @@ td a {
 
 .logo-footer {
     margin-top: 30px;
-    display: inline-block;
+    width: 100%;
 }
 
 .registrati {
     background-color: hsl(226deg 58% 72%);
     color: white;
-    margin-left: 770px;
 }
